--- a/catalog.html
+++ b/catalog.html
@@ -3,19 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <title>Gllacy Shop</title>
-  <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
+    <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <header class="main-header">
     <div class="container">
       <div class="header-logo">
-        <img src="img/logo.svg" alt="Логотип">
+        <a charset="header-logo" href="index.html">
+          <img src="img/logo.svg" alt="Логотип">
+        </a>
       </div>
       <nav class="main-navigation">
         <ul class="navigation-list">
           <li class="navigation-item navigation-item--current">
             <a class="navigation-link" href="#">Каталог</a>
+            <ul class="dropdown-list">
+              <li class="dropdown-item">
+                <a class="dropdown-link" href="#">Новинки</a>
+              </li>
+              <li class="dropdown-item">
+                <a class="dropdown-link" href="#">Сливочное</a>
+              </li>
+              <li class="dropdown-item">
+                <a class="dropdown-link" href="#">Щербеты</a>
+              </li>
+              <li class="dropdown-item">
+                <a class="dropdown-link" href="#">Фруктовый лед</a>
+              </li>
+              <li class="dropdown-item">
+                <a class="dropdown-link" href="#">Мелорин</a>
+              </li>
+            </ul>
           </li>
           <li class="navigation-item">
             <a class="navigation-link" href="#">Доставка и оплата</a>
