--- a/catalog.html
+++ b/catalog.html
@@ -53,7 +53,7 @@
       </div>
       <ul class="user-block">
         <li class="user-block-item">
-          <a class="icon-login" href="#">Вход</a>
+          <a class="user-link icon-login" href="#">Вход</a>
           <form action="#" class="form-login">
             <input type="email" name="email" placeholder="Электронная почта">
             <input type="password" name="pass" placeholder="Пароль">
@@ -63,52 +63,58 @@
             <a class="lost-password" href="#">Забыли пароль?</a>
           </p>
           <p>
-            <a class="new-account" href="#">Новая регистрация</a>
+            <a class="lost-password" href="#">Новая регистрация</a>
           </p>
         </li>
         <li class="user-block-item">
-          <a class="icon-basket" href="#">Пусто</a>
-         <table class="table-basket">
-          <tr>
-            <td>
-              <a class="delete" href="#">Убрать</a>
-            </td>
-            <td>
-              <img src="img/ice-cream-small" alt="ice-cream">
-            </td>
-            <td>
-              <p>Пломбир с апельсиновым джемом</p>
-            </td>
-            <td>
-              <p>1,5кг x<span class="price">200 руб</span></p>
-            </td>
-          </tr>
-          <tr>
-            <td>
-              <a class="delete" href="#">Убрать</a>
-            </td>
-            <td>
-              <img src="img/ice-cream-small2" alt="ice-cream2">
-            </td>
-            <td>
-              <p>Клубничный пломбир с присыпкой из
-                белого </p>
-            </td>
-            <td>
-              <p>1,5 кг x <span class="price">200 руб</span></p>
-            </td>
-          </tr>
-          <tr>
-            <td colspan="4">
-              <b class="total-price">Итого: 750 руб</b>
-            </td>
-          </tr>
-          <tr>
-            <td colspan="4">
-              <a class="btn" href="#">Оформить заказ</a>
-            </td>
-          </tr>
-        </table>
+          <a class=" user-link icon-basket" href="#">Пусто</a>
+          <table class="table-basket">
+            <tr>
+              <td>
+                <a class="delete" href="#">Убрать</a>
+              </td>
+              <td class="ice-cream-small">
+                <img src="img/ice-cream-small.png" width="33" height="33" alt="ice-cream">
+              </td>
+              <td>
+                <p>Пломбир с апельсиновым джемом</p>
+              </td>
+              <td>
+                <p>1,5кг x<span class="price">200 руб</span></p>
+              </td>
+              <td>
+                300 руб
+              </td>
+            </tr>
+            <tr class="border-bottom">
+              <td>
+                <a class="delete" href="#">Убрать</a>
+              </td>
+              <td class="ice-cream-small">
+                <img src="img/ice-cream-small2.png" width="33" height="33"  alt="ice-cream2">
+              </td>
+              <td>
+                <p>Клубничный пломбир с присыпкой из
+                  белого </p>
+              </td>
+              <td>
+                <p>1,5 кг x <span class="price">200 руб</span></p>
+              </td>
+              <td>
+                450 руб
+              </td>
+            </tr>
+            <tr>
+              <td colspan="4">
+                <b class="total-price">Итого: 750 руб</b>
+              </td>
+            </tr>
+            <tr>
+              <td colspan="4">
+                <a class="btn" href="#">Оформить заказ</a>
+              </td>
+            </tr>
+          </table>
         </li>
       </ul>
       <div class="information">
@@ -135,6 +141,7 @@
         </li>
       </ul>
     </div>
+    <h1 class="heading-title">Сливочное мороженое</h1>
     <div class="filter-block">
       <form action="#" class="filter-form">
         <div class="filter-item">
@@ -184,7 +191,6 @@
         <input class="btn btn-border-red" type="submit" value="Применить">
       </form>
     </div>
-    <h1 class="heading-title">Сливочное мороженое</h1>
     <section class="products">
       <div class="products-item">
         <img src="img/products-img.png" width="267" height="267" alt="products-img">
