--- a/index.html
+++ b/index.html
@@ -67,53 +67,6 @@
         </li>
         <li class="user-block-item">
           <a class="user-link icon-basket" href="#">Пусто</a>
-          <table class="table-basket">
-            <tr>
-              <td>
-                <a class="delete" href="#">Убрать</a>
-              </td>
-              <td>
-                <img src="img/ice-cream-small" alt="ice-cream">
-              </td>
-              <td>
-                <p>Пломбир с апельсиновым джемом</p>
-              </td>
-              <td>
-                <p>1,5кг x<span class="price">200 руб</span></p>
-              </td>
-              <td>
-                300 руб
-              </td>
-            </tr>
-            <tr class="border-bottom">
-              <td>
-                <a class="delete" href="#">Убрать</a>
-              </td>
-              <td>
-                <img src="img/ice-cream-small2" alt="ice-cream2">
-              </td>
-              <td>
-                <p>Клубничный пломбир с присыпкой из
-                  белого </p>
-              </td>
-              <td>
-                <p>1,5 кг x <span class="price">200 руб</span></p>
-              </td>
-              <td>
-                450 руб
-              </td>
-            </tr>
-            <tr>
-              <td colspan="4">
-                <b class="total-price">Итого: 750 руб</b>
-              </td>
-            </tr>
-            <tr>
-              <td colspan="4">
-                <a class="btn" href="#">Оформить заказ</a>
-              </td>
-            </tr>
-          </table>
         </li>
       </ul>
       <div class="information">
@@ -154,7 +107,7 @@
           </p>
         <a class="btn" href="#">Хочу варенье!</a>
       </div>
-      <div class="action-item ">
+      <div class="action-item chocolate-bg">
         <h2 class="action-title">Шоколадки даром!</h2>
         <p class="action-description">
           При покупке 2 кг пломбира,
@@ -257,11 +210,13 @@
         <input class="btn" type="submit" value="Отправить">
       </form>
     </div>
-    <section class="maps">
-      <img src="img/maps.jpg" width="1200" height="430" alt="map">
+  </main>
+  <section class="maps">
+    <div class="container">
+      <img src="img/maps.jpg" width="1200" height="430" alt="карта">
       <div class="contacts">
         <p class="contacts-title">Адрес главного офиса и офлайн магазина</p>
-        <b class="contacts-adress">ул. Большая Конюшенная 19/8, Санкт-Петербург</b>
+        <b class="contacts-adress">ул. Большая Конюшенная<br> 19/8, Санкт-Петербург</>
         <p>
           Для заказов по телефону:
         </p>
@@ -273,8 +228,8 @@
         </p>
         <a class="btn" href="#">Форма обратной связи</a>
       </div>
-    </section>
-  </main>
+    </div>
+  </section>
   <footer class="main-footer">
     <div class="container">
       <div class="social">
