--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <header class="main-header">
     <div class="container">
       <div class="header-logo">
-        <img src="img/logo.png" alt="Логотип">
+        <img src="img/logo.svg"  alt="">
       </div>
       <nav class="main-navigation">
         <ul class="navigation-list">
