--- a/catalog.html
+++ b/catalog.html
@@ -323,7 +323,7 @@
         <li class="paginator-item paginator-item-prev">
           <a class="paginator-link " href="#">Prev</a>
         </li>
-        <li class="paginator-item">
+        <li class="paginator-item paginator-item--current">
           <a class="paginator-link" href="#">1</a>
         </li>
         <li class="paginator-item">
