--- a/catalog.html
+++ b/catalog.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Gllacy Shop</title>
-  <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&amp;subset=cyrillic" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&amp;subset=cyrillic" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -142,24 +142,6 @@
           </div>
         </li>
       </ul>
-      <section class="slider">
-        <div class="container">
-          <div class="slider-title">
-            <h1>
-              Крем-брюле и пломбир
-              с малиновым джемом
-            </h1>
-          </div>
-          <div class="slider-btn">
-            <a class="btn btn-big" href="#">Давайте оба!</a>
-          </div>
-          <div class="slider-controls">
-            <div class="slider-controls-dot"></div>
-            <div class="slider-controls-dot"></div>
-            <div class="slider-controls-dot"></div>
-          </div>
-        </div>
-      </section>
     </div>
   </header>
   <main class="container">
@@ -215,7 +197,7 @@
               </div>
             </div>
           </li>
-          <li>
+          <li class="row-grow">
             <div class="filter-item">
               <div class="filter-shadow">
                 <b class="filter-title">Наполнители:</b>
@@ -363,6 +345,7 @@
             <p class="products-description">
               Сливочное с ментоловым сиропом
             </p>
+            <a class="btn fest-view" href="#">Быстрий просмотр</a>
           </div>
         </li>
         <li>
@@ -392,27 +375,31 @@
       </ul>
     </section>
     <div class="paginator">
-      <ul class="paginator-list">
-        <li class="paginator-item paginator-item-prev">
-          <a class="paginator-link " href="#">Prev</a>
-        </li>
-        <li class="paginator-item paginator-item--current">
-          <a class="paginator-link" href="#">1</a>
-        </li>
-        <li class="paginator-item">
-          <a class="paginator-link" href="#">2</a>
-        </li>
-        <li class="paginator-item">
-          <a class="paginator-link" href="#">3</a>
-        </li>
-        <li class="paginator-item">
-          <a class="paginator-link" href="#">4</a>
-        </li>
-        <li class="paginator-item">
-          <a class="paginator-link" href="#">5</a>
-        </li>
-        <li class="paginator-item paginator-item-next">
-          <a class="paginator-link " href="#">Next</a>
+      <ul class="row">
+        <li class="pagination-left">
+          <ul class="paginator-list">
+            <li class="paginator-item paginator-item-prev">
+              <a class="paginator-link " href="#">Prev</a>
+            </li>
+            <li class="paginator-item paginator-item--current">
+              <a class="paginator-link" href="#">1</a>
+            </li>
+            <li class="paginator-item">
+              <a class="paginator-link" href="#">2</a>
+            </li>
+            <li class="paginator-item">
+              <a class="paginator-link" href="#">3</a>
+            </li>
+            <li class="paginator-item">
+              <a class="paginator-link" href="#">4</a>
+            </li>
+            <li class="paginator-item">
+              <a class="paginator-link" href="#">5</a>
+            </li>
+            <li class="paginator-item paginator-item-next">
+              <a class="paginator-link " href="#">Next</a>
+            </li>
+          </ul>
         </li>
       </ul>
     </div>
