--- a/catalog.html
+++ b/catalog.html
@@ -154,7 +154,7 @@
           <a class="breadcrumbs-link" href="#">Каталог</a>
         </li>
         <li class="breadcrumbs-item">
-          <a class="breadcrumbs-link" href="#">Сливочное</a>
+          <span class="breadcrumbs-link">Сливочное</span>
         </li>
       </ul>
     </div>
