--- a/catalog.html
+++ b/catalog.html
@@ -146,7 +146,7 @@
   </header>
   <main class="container">
     <div class="breadcrumbs">
-      <ul class="breadcumbs-list">
+      <ul class="breadcrumbs-list">
         <li class="breadcrumbs-item">
           <a class="breadcrumbs-link" href="index.html">Главная</a>
         </li>
