--- a/catalog.html
+++ b/catalog.html
@@ -21,13 +21,13 @@
         <li>
           <nav class="main-navigation">
             <ul class="navigation-list">
-              <li class="navigation-item">
+              <li class="navigation-item navigation-item--current">
                 <a class="navigation-link" href="catalog.html">Каталог</a>
                 <ul class="dropdown-list">
                   <li class="dropdown-item new">
                     <a class="dropdown-link" href="#">Новинки</a>
                   </li>
-                  <li class="dropdown-item">
+                  <li class="dropdown-item dropdown-item-current">
                     <a class="dropdown-link" href="#">Сливочное</a>
                   </li>
                   <li class="dropdown-item">
