--- a/index.html
+++ b/index.html
@@ -166,7 +166,6 @@
         <li>
           <div class="products-item">
             <img src="img/products-img2.png" width="267" height="267" alt="products-img2">
-            <span class="bestseller">Хит</span>
             <p class="price-products">
               <span class="products-kg">380 /</span>кг
             </p>
@@ -179,7 +178,6 @@
         <li>
           <div class="products-item">
             <img src="img/products-img3.png" width="267" height="267" alt="products-img3">
-            <span class="bestseller">Хит</span>
             <p class="price-products">
               <span class="products-kg">355/</span>кг
             </p>
@@ -193,7 +191,6 @@
         <li>
           <div class="products-item">
             <img src="img/products-img4.png" width="267" height="267" alt="products-img4">
-            <span class="bestseller">Хит</span>
             <p class="price-products">
               <span class="products-kg">415/</span>кг
             </p>
@@ -261,7 +258,7 @@
               и будете всегда в курсе всего самого вкусного, что у нас происходит.
               Обещаем не спамить и не слать всякой ненужной ерунды. Честно =) </p>
             <ul class="row subscribe-row">
-              <li>
+              <li class="subscribe-grow">
                 <input class="input-custom subscribe-email" type="text" name="email" placeholder="Электронная почта">
               </li>
               <li>
@@ -296,10 +293,10 @@
       <ul class="row footer-row">
         <li>
           <div class="social">
-            <a href="#" class="social-link social-link-tw">Twiter</a>
-            <a href="#" class="social-link social-link-inst">Instagram</a>
-            <a href="#" class="social-link social-link-fb">Facebook</a>
-            <a href="#" class="social-link social-link-vk">Vk</a>
+            <a href="#" class="social-link social-link-tw" title="Твитер"></a>
+            <a href="#" class="social-link social-link-inst" title="Инстаграм"></a>
+            <a href="#" class="social-link social-link-fb" title="Фейсбук"></a>
+            <a href="#" class="social-link social-link-vk" title="Вконтакте"></a>
           </div>
         </li>
         <li>
