--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
           <div class="products-item">
             <img src="img/products-img.png" width="267" height="267" alt="products-img">
             <p class="price-products">
-              <span class="products-kg">310/</span>кг
+              <span class="products-kg">310</span>/кг
             </p>
             <p class="products-description">
               <a class="products-link" href="#">Сливочное с апельсиновым
@@ -167,7 +167,7 @@
           <div class="products-item">
             <img src="img/products-img2.png" width="267" height="267" alt="products-img2">
             <p class="price-products">
-              <span class="products-kg">380 /</span>кг
+              <span class="products-kg">380</span>/кг
             </p>
             <p class="products-description">
               <a class="products-link" href="#">Сливочно-кофейное с кусочками шоколада</a>
@@ -179,7 +179,7 @@
           <div class="products-item">
             <img src="img/products-img3.png" width="267" height="267" alt="products-img3">
             <p class="price-products">
-              <span class="products-kg">355/</span>кг
+              <span class="products-kg">355</span>/кг
             </p>
             <p class="products-description">
               <a class="products-link" href="#">Сливочно-клубничное с
@@ -192,7 +192,7 @@
           <div class="products-item">
             <img src="img/products-img4.png" width="267" height="267" alt="products-img4">
             <p class="price-products">
-              <span class="products-kg">415/</span>кг
+              <span class="products-kg">415</span>/кг
             </p>
             <p class="products-description">
               <a class="products-link" href="">Сливочное крем-брюле с
