Закончил верстку двух страниц

--- a/catalog.html
+++ b/catalog.html
@@ -114,7 +114,7 @@
                     <img src="img/ice-cream-small2.png" width="33" height="33"  alt="ice-cream2">
                   </td>
                   <td>
-                    <p>Клубничный пломбир с присыпкой<br> из
+                    <p>Клубничный пломбир с присыпкой из
                       белого </p>
                   </td>
                   <td>
@@ -173,8 +173,8 @@
         <ul class="row filter-row">
           <li>
             <div class="filter-item">
+              <b class="filter-title">Сортировка:</b>
               <div class="filter-shadow">
-                <b class="filter-title">Сортировка</b>
                 <select class="filter-field filter-field-hover">
                   <option value="filter">По популярности</option>
                   <option value="filter">По популярности</option>
@@ -185,16 +185,16 @@
           </li>
           <li>
             <div class="filter-item">
+              <b class="filter-title">цена: 100руб-500руб.</b>
               <div class="filter-shadow">
-                <b class="filter-title">цена: 100руб-500руб.</b>
                 <input class="filter-field" type="range">
               </div>
             </div>
           </li>
           <li>
             <div class="filter-item">
+              <b class="filter-title">Жирность:</b>
               <div class="filter-shadow">
-                <b class="filter-title">Жирность:</b>
                 <input class="custom-radio" type="radio" name="fat-%" id="filter-label">
                 <label class="filter-radio-text" for="filter-label">0%</label>
                 <input class="custom-radio" type="radio" name="fat-%" checked id="filter-label2">
@@ -208,8 +208,8 @@
           </li>
           <li class="row-grow">
             <div class="filter-item">
+              <b class="filter-title">Наполнители:</b>
               <div class="filter-shadow">
-                <b class="filter-title">Наполнители:</b>
                 <input class="custom-checkbox" type="checkbox" checked id="filter-checkbox">
                 <label class="filter-checkbox-text" for="filter-checkbox">шоколадные</label>
                 <input class="custom-checkbox" type="checkbox" checked id="filter-checkbox2">
@@ -241,7 +241,7 @@
               <a class="link-custom products-link" href="#">Сливочное с апельсиновым
                 джемом и цитрусовой стружкой</a>
             </p>
-            <a class="btn fest-view" href="#">Быстрий просмотр</a>
+            <a class="btn fest-view" href="#">Быстрый просмотр</a>
           </div>
         </li>
         <li>
@@ -253,7 +253,7 @@
             <p class="products-description">
               <a class="link-custom products-link" href="#">Сливочно-кофейное с кусочками шоколада</a>
             </p>
-            <a class="btn fest-view" href="#">Быстрий просмотр</a>
+            <a class="btn fest-view" href="#">Быстрый просмотр</a>
           </div>
         </li>
         <li>
@@ -266,7 +266,7 @@
               <a class="link-custom products-link" href="#"> Сливочно-клубничное с
                 присыпкой из белого шоколада</a>
             </p>
-            <a class="btn fest-view" href="#">Быстрий просмотр</a>
+            <a class="btn fest-view" href="#">Быстрый просмотр</a>
           </div>
         </li>
         <li>
@@ -279,7 +279,7 @@
               <a class="link-custom products-link" href="#">Сливочное крем-брюле с
                 карамельной подливкой</a>
             </p>
-            <a class="btn fest-view" href="#">Быстрий просмотр</a>
+            <a class="btn fest-view" href="#">Быстрый просмотр</a>
           </div>
         </li>
         <li>
@@ -291,7 +291,7 @@
             <p class="products-description">
               <a class="link-custom products-link" href="#">Сливочное с брусничным джемом</a>
             </p>
-            <a class="btn fest-view" href="#">Быстрий просмотр</a>
+            <a class="btn fest-view" href="#">Быстрый просмотр</a>
           </div>
         </li>
         <li>
@@ -304,7 +304,7 @@
               <a class="link-custom products-link" href="#">Сливочно-черничное с цельными
                 ягодами черники</a>
             </p>
-            <a class="btn fest-view" href="#">Быстрий просмотр</a>
+            <a class="btn fest-view" href="#">Быстрый просмотр</a>
           </div>
         </li>
         <li>
@@ -317,7 +317,7 @@
               <a class="link-custom products-link" href="#">Сливочно0-лимонное с
                 карамельной присыпкой</a>
             </p>
-            <a class="btn fest-view" href="#">Быстрий просмотр</a>
+            <a class="btn fest-view" href="#">Быстрый просмотр</a>
           </div>
         </li>
         <li>
@@ -329,7 +329,7 @@
             <p class="products-description">
               <a class="link-custom products-link" href="#">Сливочное с шоколадной стружкой</a>
             </p>
-            <a class="btn fest-view" href="#">Быстрий просмотр</a>
+            <a class="btn fest-view" href="#">Быстрый просмотр</a>
           </div>
         </li>
         <li>
@@ -342,7 +342,7 @@
               <a class="link-custom products-link" href="#">Сливочно-ванильное с
                 кусочками шоколада</a>
             </p>
-            <a class="btn fest-view" href="#">Быстрий просмотр</a>
+            <a class="btn fest-view" href="#">Быстрый просмотр</a>
           </div>
         </li>
         <li>
@@ -352,9 +352,9 @@
               <span class="products-kg">435</span>/кг
             </p>
             <p class="products-description">
-              Сливочное с ментоловым сиропом
+              <a class="link-custom products-link" href="#">Сливочное с ментоловым сиропом</a>
             </p>
-            <a class="btn fest-view" href="#">Быстрий просмотр</a>
+            <a class="btn fest-view" href="#">Быстрый просмотр</a>
           </div>
         </li>
         <li>
@@ -366,7 +366,7 @@
             <p class="products-description">
               <a class="link-custom products-link" href="#">Сливочное с кусочками черного шоколада</a>
             </p>
-            <a class="btn fest-view" href="#">Быстрий просмотр</a>
+            <a class="btn fest-view" href="#">Быстрый просмотр</a>
           </div>
         </li>
         <li>
@@ -378,17 +378,17 @@
             <p class="products-description">
               <a class="link-custom products-link" href="#">Сливочное с мятным сиропом</a>
             </p>
-            <a class="btn fest-view" href="#">Быстрий просмотр</a>
+            <a class="btn fest-view" href="#">Быстрый просмотр</a>
           </div>
         </li>
       </ul>
     </section>
     <div class="paginator">
-      <ul class="row">
+      <ul class="row pagination-row">
         <li class="pagination-left">
           <ul class="paginator-list">
-            <li class="paginator-item paginator-item-prev">
-              <a class="paginator-link " href="#">Prev</a>
+            <li class="paginator-item">
+              <a class="pagination-btn prev" href="#" title="Назад">Prev</a>
             </li>
             <li class="paginator-item paginator-item--current">
               <a class="paginator-link" href="#">1</a>
@@ -405,8 +405,8 @@
             <li class="paginator-item">
               <a class="paginator-link" href="#">5</a>
             </li>
-            <li class="paginator-item paginator-item-next">
-              <a class="paginator-link " href="#">Next</a>
+            <li class="paginator-item">
+              <a class="pagination-btn next" href="#" title="Вперед">Next</a>
             </li>
           </ul>
         </li>
@@ -418,10 +418,10 @@
       <ul class="row footer-row">
         <li>
           <div class="social">
-            <a href="#" class="social-link social-link-tw"></a>
-            <a href="#" class="social-link social-link-inst"></a>
-            <a href="#" class="social-link social-link-fb"></a>
-            <a href="#" class="social-link social-link-vk"></a>
+            <a href="#" class="social-link social-link-tw">Tw</a>
+            <a href="#" class="social-link social-link-inst">Inst</a>
+            <a href="#" class="social-link social-link-fb">Fb</a>
+            <a href="#" class="social-link social-link-vk">Vk</a>
           </div>
         </li>
         <li>
