--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                 <a class="link-custom products-link" href="#">Сливочное с апельсиновым
                   джемом и цитрусовой стружкой</a>
               </p>
-              <a class="btn fest-view" href="#">Быстрий просмотр</a>
+              <a class="btn fest-view" href="#">Быстрый просмотр</a>
             </div>
           </li>
           <li>
@@ -186,7 +186,7 @@
               <p class="products-description">
                 <a class="link-custom products-link" href="#">Сливочно-кофейное с кусочками шоколада</a>
               </p>
-              <a class="btn fest-view" href="#">Быстрий просмотр</a>
+              <a class="btn fest-view" href="#">Быстрый просмотр</a>
             </div>
           </li>
           <li>
@@ -199,7 +199,7 @@
                 <a class="link-custom products-link" href="#">Сливочно-клубничное с
                   присыпкой из белого шоколада</a>
               </p>
-              <a class="btn fest-view" href="#">Быстрий просмотр</a>
+              <a class="btn fest-view" href="#">Быстрый просмотр</a>
             </div>
           </li>
           <li>
@@ -212,7 +212,7 @@
                 <a class="link-custom products-link" href="">Сливочное крем-брюле с
                   карамельной подливкой</a>
               </p>
-              <a class="btn fest-view" href="#">Быстрий просмотр</a>
+              <a class="btn fest-view" href="#">Быстрый просмотр</a>
             </div>
           </li>
         </ul>
@@ -316,16 +316,12 @@
           <li>
             <div class="about">
               <ul class="about-list">
-                <li class="about-item iconed">
-                  <a class="about-link" href="#">Для поставщиков</a>
-                </li>
-                <li class="about-item">
-                  <a class="about-link" href="#">О производстве</a>
-                </li>
-                <li class="about-item">
+                <li class="about-item about-item-iconed">
+                  <a class="about-link about-icon-link" href="#">Для поставщиков</a>
                   <a class="about-link" href="#">Наши документы</a>
                 </li>
                 <li class="about-item">
+                  <a class="about-link" href="#"> О производстве</a>
                   <a class="about-link" href="#">Экологические стандарты</a>
                 </li>
               </ul>
