--- a/catalog.html
+++ b/catalog.html
@@ -388,7 +388,7 @@
         <li class="pagination-left">
           <ul class="paginator-list">
             <li class="paginator-item">
-              <a class="pagination-btn prev" href="#" title="Назад">Prev</a>
+              <a class="pagination-btn prev" href="#">Prev</a>
             </li>
             <li class="paginator-item paginator-item--current">
               <a class="paginator-link" href="#">1</a>
@@ -418,25 +418,21 @@
       <ul class="row footer-row">
         <li>
           <div class="social">
-            <a href="#" class="social-link social-link-tw">Tw</a>
-            <a href="#" class="social-link social-link-inst">Inst</a>
-            <a href="#" class="social-link social-link-fb">Fb</a>
-            <a href="#" class="social-link social-link-vk">Vk</a>
+            <a href="#" class="social-link social-link-tw" title="Твитер"></a>
+            <a href="#" class="social-link social-link-inst" title="Инстаграм"></a>
+            <a href="#" class="social-link social-link-fb" title="Фейсбук"></a>
+            <a href="#" class="social-link social-link-vk" title="Вконтакте"></a>
           </div>
         </li>
         <li>
           <div class="about">
             <ul class="about-list">
-              <li class="about-item iconed">
-                <a class="about-link" href="#">Для поставщиков</a>
-              </li>
-              <li class="about-item">
-                <a class="about-link" href="#">О производстве</a>
-              </li>
-              <li class="about-item">
+              <li class="about-item about-item-iconed">
+                <a class="about-link about-icon-link" href="#">Для поставщиков</a>
                 <a class="about-link" href="#">Наши документы</a>
               </li>
               <li class="about-item">
+                <a class="about-link" href="#"> О производстве</a>
                 <a class="about-link" href="#">Экологические стандарты</a>
               </li>
             </ul>
@@ -449,7 +445,7 @@
                 <img src="img/logo-htmlacademy.svg" alt="footer-logo">
               </a>
             </div>
-            <a class="htmlacademy-link" href="https://htmlacademy.ru/">Сделано в HTML Academy &copy; 2017</a>
+            <a class="link-custom htmlacademy-link" href="https://htmlacademy.ru/">Сделано в HTML Academy &copy; 2017</a>
           </div>
         </li>
       </ul>
