--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <li>
             <nav class="main-navigation">
               <ul class="navigation-list">
-                <li class="navigation-item navigation-active">
+                <li class="navigation-item">
                   <a class="navigation-link" href="#">Каталог</a>
                   <ul class="dropdown-list">
                     <li class="dropdown-item new">
